VPOD/securityGroup.tf
resource "aws_security_group" "APIGWSG" {
    name = "${var.username}-APIGWSG"
    description = "Enable SSH or RDP"

   
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
     ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["${var.BastionHostPrivateIP}"]
    }
	    ingress {
        from_port = 443
        to_port = 443
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
        ingress {
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
	
	  egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    

    vpc_id = "${var.VPCId}"

    tags {
        "Name" = "${var.username}"
		"Organisation" = "${var.username}"
    }
}
